--- a/src/Employee_MainForm.form
+++ b/src/Employee_MainForm.form
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" MaxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="DefaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
   <SyntheticProperties>
-    <SyntheticProperty name="FormSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="GenerateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
-    <AuxValue name="FormSettings_AutoResourcing" type="java.lang.Integer" value="0"/>
-    <AuxValue name="FormSettings_AutoSetComponentName" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_GenerateFQN" type="java.lang.Boolean" value="true"/>
-    <AuxValue name="FormSettings_GenerateMnemonicsCode" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_I18nAutoMode" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_LayoutCodeTarget" type="java.lang.Integer" value="1"/>
-    <AuxValue name="FormSettings_ListenerGenerationStyle" type="java.lang.Integer" value="0"/>
-    <AuxValue name="FormSettings_VariablesLocal" type="java.lang.Boolean" value="false"/>
-    <AuxValue name="FormSettings_VariablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true"/>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="1"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
-    <Property name="UseNullLayout" type="boolean" value="true"/>
+    <Property name="useNullLayout" type="boolean" value="true"/>
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
